--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   },
   "dependencies": {
     "@electron-toolkit/preload": "^1.0.2",
-    "@electron-toolkit/utils": "^1.0.2"
+    "@electron-toolkit/utils": "^1.0.2",
+    "music-metadata": "7.13.0"
   },
   "devDependencies": {
     "@any-touch/vue3": "^2.2.0",
@@ -39,7 +40,6 @@
     "eslint-plugin-vue": "^9.7.0",
     "howler": "^2.2.3",
     "less": "^4.1.3",
-    "music-metadata": "^8.1.3",
     "naive-ui": "^2.34.3",
     "prettier": "^2.7.1",
     "typescript": "^4.9.3",
